--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,18 @@ html
 
 		= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
 		= javascript_include_tag "application", "data-turbolinks-track" => true
-		= filepicker_js_include_tag
 		= csrf_meta_tags
 	body
+		
+		p[class="notice"]
+	   		= notice
+		p[class="notice"]
+			= alert
 
-		=yield
+		div
+			- unless current_stuff
+				= link_to 'Sign in', new_stuff_session_path
+			- else
+				= current_stuff.email
+
+		= yield
