--- a/app/views/layouts/admin_layout.html.slim
+++ b/app/views/layouts/admin_layout.html.slim
@@ -19,5 +19,8 @@ div[class="menu to-left span3"]
 			li
 				= link_to "Change Password", edit_staff_path
 
+			li
+				= link_to "Create a Member", new_staff_path
+
 div[class="to-left span9"]
 	= yield(:admin_list)
