--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,7 @@
  *
  *= require_tree .
  *= require_self
- *= require jquery.fileupload-ui
- */
+  */
 @media (min-width: 1200px) {
 	body {padding-bottom: 100px;}
 	.container {
@@ -90,3 +89,8 @@ nav ul {
 }
 
 .border-row { border-bottom: 2px solid #ccc; }
+
+.posts > div { margin-bottom: 20px; }
+
+
+.pictures > div {float: left; margin-right: 20px;}
