--- a/app/views/tickets/index.html.slim
+++ b/app/views/tickets/index.html.slim
@@ -1,5 +1,5 @@
 - content_for :admin_list do
-	h1 List of Tickets
+	h1 #{Ticket::SECTIONS[params[:section].to_sym]}
 	div[class="voffset4"]
 		= render(partial: @tickets, spacer_template: "shared/spacer") || "There are no tickets for this staff member yet"
 
