--- a/app/views/tickets/_fields.html.slim
+++ b/app/views/tickets/_fields.html.slim
@@ -37,5 +37,5 @@ div
 	       = p.file_field :content
 	       /, :multiple => true, name: "pictures[content][]"
 
-div
-	= link_to 'broadcast', ticket_broadcast_path, remote: true
+/div
+/	= link_to 'broadcast', ticket_broadcast_path, remote: true
