--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,3 +101,14 @@ nav ul {
 .autocomplete .selected { background:#F0F0F0; } 
 .autocomplete div { padding:2px 5px; white-space:nowrap; overflow:hidden; } 
 .autocomplete strong { font-weight:normal; color:#3399FF; } 
+
+.hide-me { display: none; }
+
+div.ajax-loader {
+    width: 160px; 
+    font-style: italic; 
+    position: fixed; 
+    top: 0px;
+    left: 5px;  
+}
+
