--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,7 +1,7 @@
 - content_for :admin_list do
 	h2 List of Posts
-	h3 Staff Member: #{@staff.name}
+	h3 Ticket: #{@ticket.token}
 	div[class="posts"]
-		= render(partial: @posts, spacer_template: "shared/spacer") || "There are no posts for this staff member yet"
+		= render(partial: @posts, spacer_template: "shared/spacer") || "There are no posts for this ticket yet"
 
 = render :template => 'layouts/admin_layout'
