--- a/app/views/staffs/_staff.html.slim
+++ b/app/views/staffs/_staff.html.slim
@@ -1,6 +1,19 @@
-div
-	| #{staff.name } ( #{staff.email} )
+div[class="voffset4"]
+	= form_for staff, remote: true do |f|
+		div
+			| #{staff.name } ( #{staff.email} )
+		div 
+			| role: #{staff.role}
 
-div[class="member-actions"]
-	div
-		= link_to "view posts", staff_posts_path(staff.id)
+		div
+			div
+				= f.label :department_id, "Department:"
+			div
+				= f.select(:department_id, @dpts, { :include_blank => true, :selected => staff.department.try(:id) })
+
+		div
+			div[class="to-left"]
+				= f.label :only_department, "Only Department:"
+
+			div[class="to-left"]
+				= f.check_box :only_department
