--- a/app/views/tickets/_ticket.html.slim
+++ b/app/views/tickets/_ticket.html.slim
@@ -1,21 +1,28 @@
+-  q = params[:query] ? params[:query].split : []
 = form_for ticket
 	div[class="clear voffset4"]
-		div[class="bold"] = link_to highlight(ticket.subject, params[:query].split), ticket_show_path(ticket.token)
-		div = highlight(ticket.body, params[:query].split)
+		div[class="bold"] = link_to highlight(ticket.subject, q), show_tickets_path(ticket.token)
+		div = highlight(ticket.body, q)
 		div Status: #{ticket.status.title}
 		
 		- if ticket.staff 
 			div 
-				| Staff Name #{ ticket.staff.name }
+				| Staff Name: #{ ticket.staff.name }
+
+		- if ticket.department 
+			div
+				| Department: #{ ticket.department.title }
 
 		div
 			div created_at #{ticket.created_at}
 			div updated_at #{ticket.updated_at}
 
-		
 		div[class="actions"]
-			div = link_to "reply" 
-			div = link_to "view", ticket_show_path(ticket.token)
+			div = link_to "[reply]", new_ticket_post_path(ticket)
+			div = link_to "[view]", show_tickets_path(ticket.token)
 
-consequuntur 
-consequuntur
+			div[class="take"]
+				- unless ticket.taken_tickets
+					= link_to "[take]", take_ticket_path(ticket.id), remote: true
+				- else
+					| taken by #{ticket.taken_tickets.name}
