--- a/app/views/ticket_mailer/receive_confirmation.html.slim
+++ b/app/views/ticket_mailer/receive_confirmation.html.slim
@@ -1,7 +1,6 @@
 p Hi, man!
 p Ticket have been received.
 div
-	= link_to "Edit Ticket", ticket_edit_url(@ticket.token)
+	= link_to "Edit Ticket", edit_tickets_url(@ticket.token)
 div
-	= link_to "View Ticket", ticket_show_url(@ticket.token)
-
+	= link_to "View Ticket", show_tickets_url(@ticket.token)
