--- a/app/views/tickets/show.html.slim
+++ b/app/views/tickets/show.html.slim
@@ -13,10 +13,4 @@ div[class="span12"]
 
 	= render partial: '/posts/post_form', locals: {remote: true, ticket: @ticket, post: @post}
 
-	div[class="clear voffset4"]
-		div[class="bold"] Answers
-		div[class="voffset4 posts"]
-			- if @posts.any?
-			  	= render @posts
-			- else  
-			  	p[class="no-posts"] There are no answers available
+	= render '/posts/posts_block'
