hope a last commit

--- a/app/views/histories/index.html.slim
+++ b/app/views/histories/index.html.slim
@@ -1,2 +1,6 @@
-h1 Histories#index
-p Find me in app/views/histories/index.html.slim
+- content_for :admin_list do
+	h1 Histories
+
+	= render @histories
+
+= render :template => 'layouts/admin_layout'
