--- a/app/views/tickets/_ticket.html.slim
+++ b/app/views/tickets/_ticket.html.slim
@@ -1,10 +1,8 @@
 -  q = params[:query] ? params[:query].split : []
-= form_for ticket
+= form_for ticket, url: change_status_tickets_path(ticket.token), remote: true, method: :put do |f|
 	div[class="clear voffset4"]
 		div[class="bold"] = link_to highlight(ticket.subject, q), show_tickets_path(ticket.token)
 		div = highlight(ticket.body, q)
-		div Status: #{ticket.status.title}
-		
 		- if ticket.staff 
 			div 
 				| Staff Name: #{ ticket.staff.name }
@@ -16,6 +14,8 @@
 		div
 			div created_at #{ticket.created_at}
 			div updated_at #{ticket.updated_at}
+
+		div Status: #{f.select(:status_id, statuses_for_select, { :selected => ticket.status.id }, class: "remotable", id: nil)}
 
 		div[class="actions"]
 			div = link_to "[reply]", new_ticket_post_path(ticket)
