--- a/app/views/layouts/admin_layout.html.slim
+++ b/app/views/layouts/admin_layout.html.slim
@@ -3,27 +3,7 @@ div
 		= text_field_tag :token, params[:token], placeholder: "OAZ-217-YMH-824-PIO"
 
 div[class="menu to-left span3"]
-	nav
-		ul
-			- Ticket::SECTIONS.each do |k, v|
-				li 
-					= link_to v, tickets_path(:section => k)
-
-			li
-				= link_to "Change Password", edit_staff_path
-
-			- if current_staff.admin?
-				li
-					= link_to "Manage Members", staffs_path
-				li
-					= link_to "Create a Member", new_staff_path
-
-			li
-				= link_to "Full Text Search", search_form_tickets_path
-
-			li
-				= link_to "History", histories_path
-
+	= render '/shared/menu'
 
 div[class="to-left span9"]
 	= yield(:admin_list)
