--- a/app/views/staffs/_staff.html.slim
+++ b/app/views/staffs/_staff.html.slim
@@ -9,11 +9,11 @@ div[class="voffset4"]
 			div
 				= f.label :department_id, "Department:"
 			div
-				= f.select(:department_id, @dpts, { :include_blank => true, :selected => staff.department.try(:id) })
+				= f.select(:department_id, @dpts, { :include_blank => true, :selected => staff.department.try(:id) }, class: :remotable)
 
 		div
 			div[class="to-left"]
 				= f.label :only_department, "Only Department:"
 
 			div[class="to-left"]
-				= f.check_box :only_department
+				= f.check_box :only_department, class: :remotable
