--- a/app/views/posts/_posts_block.html.slim
+++ b/app/views/posts/_posts_block.html.slim
@@ -1,4 +1,4 @@
-div[class="clear voffset4 user-win"]
+div[class="clear voffset4 user-win #{ "ticket-#{params[:token]}" if params[:token]}"]
 	div[class="bold"] Answers
 	div[class="voffset4 posts"]
 		- if @posts.any?
