--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,16 +14,16 @@
  *= require_self
   */
 @media (min-width: 1200px) {
-	body {padding-bottom: 100px;}
-	.container {
-		width: 1170px;
-	}
+  body {padding-bottom: 100px;}
+  .container {
+    width: 1170px;
+  }
 }
 
 header {
-	color: #F0F0F0;
-	background: #00518F;
-	padding: 10px 10px;
+  color: #F0F0F0;
+  background: #00518F;
+  padding: 10px 10px;
 }
 
 .clear-float { overflow: auto; }
@@ -33,8 +33,8 @@ header {
 .clear { clear: both }
 
 .notice {
-	color: blue;
-	font-weight: bold;
+  color: blue;
+  font-weight: bold;
 }
 
 .drop-box { width: 500px; }
@@ -86,7 +86,7 @@ nav ul {
 }
 
 .menu a:hover {
-	background-color: #C5D9EB;
+  background-color: #C5D9EB;
 }
 
 .border-row { border-bottom: 2px solid #ccc; }
@@ -112,3 +112,4 @@ div.ajax-loader {
     left: 5px;  
 }
 
+.highlight-me { background-color: #ff9f5f}
